add key call back

--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
     <head>
         <script src ="phaser.min.js"></script>
+        <script src ="States/state0.js"></script>
         <script src ="States/state1.js"></script>
         <script src ="States/state2.js"></script>
+        <script src ="States/state3.js"></script>
+        <script src ="States/state4.js"></script>
+        <script src ="States/state5.js"></script>
+        <script src ="States/state6.js"></script>
+        <script src ="States/state7.js"></script>
+        <script src ="States/state8.js"></script>
+        <script src ="States/state9.js"></script>
+
     </head>
     <body>
         <script src ="main.js"></script>
