--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <script src ="phaser.min.js"></script>
+        <link rel = "stylesheet" href = "main.css">
         <script src ="States/state0.js"></script>
         <script src ="States/state1.js"></script>
         <script src ="States/state2.js"></script>
