--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src ="phaser.min.js"></script>
+        <script src ="Phaser/phaser.min.js"></script>
         <link rel = "stylesheet" href = "main.css">
         <script src ="States/state0.js"></script>
         <script src ="States/state1.js"></script>
@@ -17,6 +17,5 @@
     </head>
     <body>
         <script src ="main.js"></script>
-        <script src ="https:"
     </body>
 </html>
